# pitch-conditioning-study

./: .gitignore  ARTIFACT_GUIDE.md  PROJECT_STEPS.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: categorical_pitch.json  continuous_pitch.json  generation_examples.json  inference_sweep.json  pitch_levels.json  train_fine.json  train_long.json  train_small.json  two_bar_dataset.json
data/: README.md
data/categorical_pitch/: parameters.json  summary.json
data/continuous_pitch/: parameters.json  summary.json
data/two_bar_categorical_pitch/: summary.json
data/two_bar_continuous_pitch/: parameters.json  summary.json
data/two_bar_pitch_source/: metadata_showcase.json  metadata_test.json  metadata_train.json  metadata_validation.json  summary.json
dataprep/: auxiliary_functions.py  step_0_visualization.py  step_1_normalization.py  step_2_encodec.py  step_3_sidecars.py  step_4_HF.py
documents/diagrams/: README.md
documents/paper/: README.md  ismir.sty  main.tex  references.bib
inference/: rt.py
results/: LISTENING_GUIDE.md
results/audio_examples/: generated_summary.json
results/sweeps/: summary.json
results/tables/: objective_metrics.csv  objective_metrics_fine.csv  objective_metrics_test.csv  objective_summary.json  (+9 more)
rnencodec/: __init__.py
rnencodec/utils/: io.py  (+2 more)
scripts/: analyze_generated_audio.py  build_pitch_conditioning_variants.py  build_two_bar_pitch_source.py  evaluate_generated_pitch.py  generate_training_examples.py  run_dataprep_pipeline.py  run_inference_sweep.py  train_pitch_models.py
training/: loop.py
(+87 files in other folders)
